--- a/app/core/servers/templates/server/server.html
+++ b/app/core/servers/templates/server/server.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="widget stacked widget-table action-table">
-  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('servers.server_add')}}"><i class="icon-plus icon-white"></i> {{_('Add') }}</a></p>
+  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('servers.server_add')}}"><i class="glyphicon glyphicon-plus"></i> {{_('Add') }}</a></p>
   <table class="table table-bordered">
 <div class="widget-content">
   <table class="table table-bordered table-striped table-highlight">
@@ -14,7 +14,7 @@
         <th>{{ _('Password') }}</th>
         <th>{{ _('Protocol') }}</th>
         <th>{{ _('Organisation') }}</th>
-      <th class="td-actions"></th>
+        <th style="width: 70px;"></th>
       </tr>
     </thead>
     <tbody>
@@ -27,8 +27,10 @@
       <td>{{ s.protocol }}</td>
       <td>{{ s.organisations.name }}</td>
       <td class="td-actions">
-        <a href="{{url_for('servers.server_edit', id=s.id)}}" class="btn btn-small"><i class="btn-icon-only icon-edit"></i></a>
-        <a data-url="{{url_for('servers.server_del', id=s.id)}}" class="btn btn-small confirm" id="{{s.id}}" data-toggle="modal" data-target="#confirm-dialog"><i class="btn-icon-only icon-remove"></i></a>
+        <a href="{{url_for('servers.server_edit', id=s.id)}}" class="btn btn-default btn-xs"><i class="glyphicon glyphicon-edit"></i></a>
+        <a data-url="{{url_for('servers.server_del', id=s.id)}}" class="btn btn-default btn-xs confirm" data-toggle="modal" data-target="#confirm-dialog">
+            <i class="glyphicon glyphicon-remove"></i>
+        </a>
         </td>
       </tr>
     {% endfor %}
