--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,1 +1,1 @@
-<p class="pull-right"><img src="/static/img/Xivo.png"/></p>
+<p class="pull-right"><img src="{{ url_for('static', filename='img/Xivo.png') }}"/></p>
