--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -11,7 +11,7 @@
         <th>{{ _('Author') }}</th>
         <th>{{ _('Licence') }}</th>
         <th>{{ _('Parent') }}</th>
-        <th class="td-actions"></th>
+        <th style="width: 35px;"></th>
       </tr>
     </thead>
     <tbody>
