--- a/app/core/market/templates/market/market_list.html
+++ b/app/core/market/templates/market/market_list.html
@@ -4,11 +4,11 @@
       <td>{{ u.informations.author }}</td>
       <td>{{ u.informations.licence }}</td>
       <td>{{ u.plugin.parent }}</td>
-      <td class="td-actions">
+      <td>
           {% if u.installed %}
-            <a href="{{url_for('market.market_del', module=u.name)}}" class="btn btn-small btn-danger"><i class="btn-icon-only icon-remove icon-white"></i></a>
+            <a href="{{url_for('market.market_del', module=u.name)}}" class="btn btn-small btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
           {% else %}
-            <a href="{{url_for('market.market_get', module=u.name)}}" class="btn btn-small btn-success"><i class="btn-icon-only icon-arrow-down icon-white"></i></a>
+            <a href="{{url_for('market.market_get', module=u.name)}}" class="btn btn-small btn-success"><i class="glyphicon glyphicon-arrow-down"></i></a>
           {% endif %}
         </td>
       </tr>
