--- a/app/core/organisations/templates/organisations/organisation_edit.html
+++ b/app/core/organisations/templates/organisations/organisation_edit.html
@@ -2,14 +2,21 @@
 {% block content %}
     {% from "forms/macros.html" import render_field %}
 
-      <form class="form" method="post">
-        {{ form.csrf_token }}
-        <h2 class="form">{{ _('Edit organisation') }}</h2>
-        {{ render_field(form.name, class="input-xlarge") }}
-        {{ render_field(form.description, class="input-xlarge") }}
-        {{ render_field(form.users, class="input-xlarge") }}
-        {{ render_field(form.submit, class="btn btn-primary") }}
-      </form>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>{{ _('Edit organisation') }}</h4>
+    </div>
+    <div class="panel-body">
+      <div class="well well-xs col-md-6">
+        <form class="form" role="form" method="post">
+            {{ form.csrf_token }}
+            {{ render_field(form.name, with_label=1) }}
+            {{ render_field(form.description, with_label=1) }}
+            {{ render_field(form.submit, class="btn btn-default btn-primary") }}
+        </form>
+      </div>
+    </div>
+</div>
 
 {% endblock %}
 
