--- a/app/core/profil/templates/profil/account_add.html
+++ b/app/core/profil/templates/profil/account_add.html
@@ -2,18 +2,26 @@
 {% block content %}
     {% from "forms/macros.html" import render_field %}
 
-      <form class="form" method="post">
-        {{ form.csrf_token }}
-        <h2 class="form">{{ _('Add account') }}</h2>
-        {{ render_field(form.username, class="input-xlarge") }}
-        {{ render_field(form.email, class="input-xlarge") }}
-        {{ render_field(form.displayname, class="input-xlarge") }}
-        {{ render_field(form.password, class="input-xlarge") }}
-        {{ render_field(form.role, class="input-large") }}
-        {{ render_field(form.language, class="input-large") }}
-        {{ render_field(form.organisations, class="input-large") }}
-        {{ render_field(form.submit, class="btn btn-primary") }}
-      </form>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>{{ _('Add account') }}</h4>
+    </div>
+    <div class="panel-body">
+      <div class="well well-xs col-md-6">
+        <form class="form" role="form" method="post">
+            {{ form.csrf_token }}
+            {{ render_field(form.username, with_label=1) }}
+            {{ render_field(form.email, with_label=1) }}
+            {{ render_field(form.displayname, with_label=1) }}
+            {{ render_field(form.password, with_label=1) }}
+            {{ render_field(form.role, with_label=1) }}
+            {{ render_field(form.language, with_label=1) }}
+            {{ render_field(form.organisations, with_label=1) }}
+            {{ render_field(form.submit, class="btn btn-default btn-primary") }}
+        </form>
+      </div>
+    </div>
+</div>
 
 {% endblock %}
 
