--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -2,43 +2,38 @@
 {% block content %}
     {% from "forms/macros.html" import render_field %}
 
-<div class="row">
-  <div class="span8">      		
-    <div class="widget stacked ">
-      <div class="widget-header">
-         <h3>{{ _('Your Account') }} ({{ current_user.username }})</h3>
-      </div> 
-				
-      <div class="widget-content">
-        <div class="tabbable">
-          <ul class="nav nav-tabs">
-            <li class="active">
-              <a href="#profil" data-toggle="tab">{{ _('Profil') }}</a>
-            </li>
-          </ul>
-          <br>
-          <div class="tab-content">
-            <div class="tab-pane active" id="profil">
-              <form class="form" method="post">
-              {{ form.csrf_token }}
-              <fieldset>
-                {{ render_field(form.username, class="input-xlarge", disabled="disabled") }}
-                {{ render_field(form.displayname, class="input-xlarge") }}
-                {{ render_field(form.email, class="input-xlarge") }}
-                {{ render_field(form.language, class="input-xlarge") }}
-                <br><br>
-                {{ render_field(form.password, class="input-xlarge") }}
-                <br>
-                {{ render_field(form.submit, class="btn btn-primary") }}
-              </fieldset>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>{{ _('Your Account') }} ({{ current_user.username }})</h3>
     </div>
-
-  </div>
+    <div class="panel-body">
+        <div class="well well-xs col-md-6">
+            <div class="tabbable">
+                <ul class="nav nav-tabs">
+                    <li class="active">
+                    <a href="#profil" data-toggle="tab">{{ _('Profil') }}</a>
+                    </li>
+                </ul>
+                <br>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="profil">
+                        <form class="form" method="post">
+                            <fieldset>
+                            {{ form.csrf_token }}
+                            {{ render_field(form.username, with_label=1, disabled="disabled") }}
+                            {{ render_field(form.displayname, with_label=1) }}
+                            {{ render_field(form.email, with_label=1) }}
+                            {{ render_field(form.language, with_label=1) }}
+                            {{ render_field(form.password, with_label=1) }}
+                            {{ render_field(form.submit, class="btn btn-default btn-primary") }}
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 {% endblock %}
