--- a/app/core/servers/templates/server/server_add.html
+++ b/app/core/servers/templates/server/server_add.html
@@ -1,19 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-    {% from "forms/macros.html" import render_field %}
+{% from "forms/macros.html" import render_field %}
 
-      <form class="form" method="post">
-        {{ form.csrf_token }}
-        <h2 class="form">{{ _('Add server') }}</h2>
-        {{ render_field(form.name, class="input-xlarge") }}
-        {{ render_field(form.address, class="input-xlarge") }}
-        {{ render_field(form.login, class="input-xlarge") }}
-        {{ render_field(form.password, class="input-xlarge") }}
-        {{ render_field(form.protocol) }}
-        {{ render_field(form.organisations, class="input-xlarge") }}
-        {{ render_field(form.users, class="input-xlarge") }}
-        {{ render_field(form.submit, class="btn btn-primary") }}
-      </form>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>{{ _('Add server') }}</h4>
+    </div>
+    <div class="panel-body">
+      <div class="well well-xs col-md-6">
+        <form class="form" role="form" method="post">
+            {{ form.csrf_token }}
+            {{ render_field(form.name, with_label=1) }}
+            {{ render_field(form.address, with_label=1) }}
+            {{ render_field(form.login, with_label=1) }}
+            {{ render_field(form.password, with_label=1) }}
+            {{ render_field(form.protocol, with_label=1) }}
+            {{ render_field(form.organisations, with_label=1) }}
+            {{ render_field(form.users) }}
+            {{ render_field(form.submit, class="btn btn-default btn-primary") }}
+        </form>
+      </div>
+    </div>
+</div>
+
 
 {% if g.user.role == 300 %}
 <script type=text/javascript>
