--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1,19 +1,17 @@
 #footer {
-  height: 50px;
   width: 100%;
-  padding: 10px 0px 0px 0px;
-  position:fixed;
+  padding: 0px 10px 0px 0px;
+  position: fixed;
   bottom:0px;
 }
 
-body {
-  padding-top: 60px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+.navbar {
+    height: 50px;
 }
 
-.sidebar-nav {
-  padding: 9px 0;
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
 .form-signin {
