--- a/app/templates/confirm.html
+++ b/app/templates/confirm.html
@@ -1,20 +1,29 @@
-<div class="modal hide fade" id="confirm-dialog">
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal">×</a>
-        <h3>Confirm</h3>
+<div class="modal fade" id="confirm-dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3 class="modal-title">{{_('Confirm')}}</h3>
+      </div>
+
+      <div class="modal-body">
+          {{_('Are you sure you want to delete this item ?')}}
+      </div>
+
+      <div class="modal-footer">
+          <a class="url-confirm"><button type="button" class="btn btn-primary">{{_('Ok')}}</button></a>
+          <button type="button" class="btn btn-default" data-dismiss="modal">{{_('Cancel')}}</button>
+      </div>
+
     </div>
-    <div class="modal-body">
-        {{_('Are you sure you want to delete this item ?')}}
-    </div>
-    <div class="modal-footer">
-        <a href="#" class="btn btn-danger url-confirm">Ok</a>
-        <a href="#" class="btn btn-cancel" data-dismiss="modal">Cancel</a>
-    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
 $('#confirm-dialog').ready(function() {
     $('.btn.confirm').click(function() {
+        console.log($(this).attr('data-url'));
         $('.url-confirm').prop('href', $(this).attr('data-url'));
     });
 });
