--- a/app/core/profil/templates/profil/accounts.html
+++ b/app/core/profil/templates/profil/accounts.html
@@ -4,7 +4,7 @@
 {% set real_role = {100 : 'Admin', 200 : 'Manager', 300 : 'Root' } %}
 
 <div class="widget stacked widget-table action-table">
-  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('profil.account_add')}}"><i class="glyphicon glyphicon-plus"></i> {{ _('Add') }}</a></p>
+  <p class="text-right"><a class="btn btn-primary btn-xs" href="{{url_for('profil.account_add')}}"><i class="glyphicon glyphicon-plus"></i> {{ _('Add') }}</a></p>
   <table class="table table-bordered">
 <div class="widget-content">
   <table class="table table-bordered table-striped table-highlight">
