--- a/app/core/servers/templates/server/server.html
+++ b/app/core/servers/templates/server/server.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="widget stacked widget-table action-table">
-  <p class="text-right"><a class="btn btn-primary btn-small" href="{{url_for('servers.server_add')}}"><i class="glyphicon glyphicon-plus"></i> {{_('Add') }}</a></p>
+  <p class="text-right"><a class="btn btn-primary btn-xs" href="{{url_for('servers.server_add')}}"><i class="glyphicon glyphicon-plus"></i> {{_('Add') }}</a></p>
   <table class="table table-bordered">
 <div class="widget-content">
   <table class="table table-bordered table-striped table-highlight">
