--- a/app/templates/forms/macros.html
+++ b/app/templates/forms/macros.html
@@ -14,7 +14,7 @@
             {% endif %}
             {% if with_icon %}
               <div class="input-group">
-                  <span class="input-group-addon"><i class="{{ with_icon }}"></i></span>
+                  <span class="input-group-addon"><i class="glyphicon glyphicon-{{ with_icon }}"></i></span>
             {% endif %}
 
             {% set class_ = kwargs.pop('class_', 'form-control') %}
