--- a/app/core/profil/templates/profil/signup.html
+++ b/app/core/profil/templates/profil/signup.html
@@ -1,19 +1,21 @@
 {% extends "base.html" %}
-{% block content %}
+{% block login %}
     {% from "forms/macros.html" import render_field %}
 
+<div class="col-md-12">
       <form class="form-signin" method="post">
         {{ form.csrf_token }}
-        <h2 class="form">{{ _('Sign up') }}</h2>
-        {{ render_field(form.username, class="input-xlarge") }}
-        {{ render_field(form.email, class="input-xlarge") }}
-        {{ render_field(form.displayname, class="input-xlarge") }}
-        {{ render_field(form.password, class="input-xlarge") }}
-        {{ render_field(form.confirm, class="input-xlarge") }}
-        {{ render_field(form.captcha, class="input-xlarge") }}
+        <h2>{{ _('Sign up') }}</h2>
+        {{ render_field(form.username) }}
+        {{ render_field(form.email) }}
+        {{ render_field(form.displayname) }}
+        {{ render_field(form.password) }}
+        {{ render_field(form.confirm) }}
+        {{ render_field(form.captcha) }}
         {{ render_field(form.agree) }}
-        {{ render_field(form.submit, class="btn btn-primary") }}
+        {{ render_field(form.submit, class="btn btn-default btn-primary") }}
       </form>
+</div>
 
 {% include "license.html" %}
 {% endblock %}
