--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -11,7 +11,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="{{ url_for('home.homepage') }}">{{ _('Home') }}</a></li>
+          <li {% if request.endpoint == "home.homepage" %}class="active"{% endif %}><a href="{{ url_for('home.homepage') }}">{{ _('Home') }}</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
