do responsive design table

--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="widget stacked widget-table action-table">
- <div class="widget-content">
+<div class="table-responsive">
    <table class="table table-bordered table-striped table-highlight">
      <thead>
       <tr>
