--- a/app/core/organisations/templates/organisations/organisations.html
+++ b/app/core/organisations/templates/organisations/organisations.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="widget stacked widget-table action-table">
+<div class="table-responsive">
   <p class="text-right"><a class="btn btn-primary btn-xs" href="{{url_for('organisations.organisation_add')}}"><i class="glyphicon glyphicon-plus"></i> {{_('Add') }}</a></p>
-  <table class="table table-bordered">
-<div class="widget-content">
   <table class="table table-bordered table-striped table-highlight">
     <thead>
       <tr>
@@ -16,13 +14,13 @@
     <tbody>
     {% for o in organisations %}
       <tr>
-      <td>{{ o.name }}</td>
-      <td>{{ o.created_time }}</td>
-      <td>
-        <a href="{{url_for('organisations.organisation_edit', id=o.id)}}" class="btn btn-default btn-xs"><i class="glyphicon glyphicon-edit"></i></a>
-        <a data-url="{{url_for('organisations.organisation_del', id=o.id)}}" class="btn btn-default btn-xs confirm" data-toggle="modal" data-target="#confirm-dialog">
+        <td>{{ o.name }}</td>
+        <td>{{ o.created_time }}</td>
+        <td>
+          <a href="{{url_for('organisations.organisation_edit', id=o.id)}}" class="btn btn-default btn-xs"><i class="glyphicon glyphicon-edit"></i></a>
+          <a data-url="{{url_for('organisations.organisation_del', id=o.id)}}" class="btn btn-default btn-xs confirm" data-toggle="modal" data-target="#confirm-dialog">
             <i class="glyphicon glyphicon-remove"></i>
-        </a>
+          </a>
         </td>
       </tr>
     {% endfor %}
