--- a/app/templates/menu_top.html
+++ b/app/templates/menu_top.html
@@ -2,14 +2,15 @@
 
 <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{ url_for('home.homepage') }}">XiVO</a>
-      </div>
-      <div class="navbar-collapse collapse">
+    </div>
+
+    <div class="navbar-collapse collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
           <li {% if request.endpoint == "home.homepage" %}class="active"{% endif %}><a href="{{ url_for('home.homepage') }}">{{ _('Home') }}</a></li>
         </ul>
@@ -31,8 +32,8 @@
           {% if g.server %}
               <li class="navbar-link" id="servers_list" title="ID server : {{ g.server.id }}"><a>{{_('on') }} {{ g.server.address }}</a></li>
           {% endif %}
-              <li class="navbar-link"><a href="{{url_for('profil.myprofil')}}">{{ _('Welcome') }}  {{current_user.displayname}}</a>&nbsp;&nbsp;</li>
-              <li class="navbar-link" title="{{_('Logout')}}"><a href="{{ url_for('login.logout') }}" class="logout"><i class="glyphicon glyphicon-off"></i></a></li>
+              <li><a href="{{url_for('profil.myprofil')}}">{{ _('Welcome') }}  {{current_user.displayname}}</a></li>
+              <li title="{{_('Logout')}}"><a href="{{ url_for('login.logout') }}" class="logout"><i class="glyphicon glyphicon-off"></i></a></li>
         </ul>
       </div>
 </div>
