switched to bootstrap 3.0.2, added gravatar in profile, switched to new flask-wtf

--- a/app/core/profil/templates/profil/profil.html
+++ b/app/core/profil/templates/profil/profil.html
@@ -20,6 +20,7 @@
                         <form class="form" method="post">
                             <fieldset>
                             {{ form.csrf_token }}
+                            <img src="{{ account.email | gravatar }}"></img>
                             {{ render_field(form.username, with_label=1, disabled="disabled") }}
                             {{ render_field(form.displayname, with_label=1) }}
                             {{ render_field(form.email, with_label=1) }}
