--- a/app/templates/menu_left.html
+++ b/app/templates/menu_left.html
@@ -1,6 +1,6 @@
 {% if current_user.is_authenticated() %}
 
-<div class="container">
+<div class="container" style="max-width: 300px;">
     <div class="well">
         <ul class="nav nav-pills nav-stacked">
         {% if g.user.role >= 200 %}
