--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,10 @@
     {% block header %}
     {% endblock %}
 </head>
+
+{% block body %}
 <body>
+{% endblock %}
 
 {% if current_user.is_authenticated() %}
 
