--- a/app/core/profil/templates/profil/signup.html
+++ b/app/core/profil/templates/profil/signup.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block body %}
+<body style="background-image: url('../../static/img/background.jpg')">
+{% endblock %}
+
 {% block login %}
     {% from "forms/macros.html" import render_field %}
 
@@ -14,6 +19,7 @@
         {{ render_field(form.captcha) }}
         {{ render_field(form.agree) }}
         {{ render_field(form.submit, class="btn btn-default btn-primary") }}
+        {{ _('Already have an account? ') }} <a href="{{url_for('login.log')}}">{{ _('Sign In') }}</a>
       </form>
 </div>
 
