added class for login

--- a/app/core/login/templates/login/login.html
+++ b/app/core/login/templates/login/login.html
@@ -23,7 +23,7 @@
         </form>
 
         <div class="login-extra">
-            {{ _('Don\'t have an account ?') }} <a href="{{url_for('profil.signup')}}">{{ _('Sign up') }}</a>
+            {{ _('Don\'t have an account ?') }} <a href="{{url_for('profil.signup')}}" class="text-info">{{ _('Sign up') }}</a>
         </div>
 </div>
 
