added new informations on plugins

--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -8,7 +8,9 @@
         <th>{{ _('Name') }}</th>
         <th>{{ _('Description') }}</th>
         <th>{{ _('Author') }}</th>
-        <th>{{ _('Licence') }}</th>
+        <th>{{ _('Email') }}</th>
+        <th>{{ _('Version') }}</th>
+        <th>{{ _('License') }}</th>
         <th>{{ _('Parent') }}</th>
         <th style="width: 35px;"></th>
       </tr>
