--- a/app/core/market/templates/market/market_list.html
+++ b/app/core/market/templates/market/market_list.html
@@ -2,7 +2,9 @@
       <td>{{ u.name }}</td>
       <td>{{ u.informations.description }}</td>
       <td>{{ u.informations.author }}</td>
-      <td>{{ u.informations.licence }}</td>
+      <td>{{ u.informations.email }}</td>
+      <td>{{ u.informations.version }}</td>
+      <td>{{ u.informations.license }}</td>
       <td>{{ u.plugin.parent }}</td>
       <td>
           {% if u.installed %}
