Displayname on market

--- a/app/core/market/templates/market/market_list.html
+++ b/app/core/market/templates/market/market_list.html
@@ -1,5 +1,5 @@
       <tr>
-      <td>{{ u.name }}</td>
+      <td>{{ u.informations.displayname }}</td>
       <td>{{ u.informations.description }}</td>
       <td>{{ u.informations.author }}</td>
       <td>{{ u.informations.email }}</td>
