--- a/app/core/market/templates/market/market_list.html
+++ b/app/core/market/templates/market/market_list.html
@@ -3,11 +3,17 @@
       <td>{{ u.informations.description }}</td>
       <td>{{ u.informations.author }}</td>
       <td>{{ u.informations.email }}</td>
-      <td>{{ u.informations.version }}</td>
+      <td>{{ u.informations.version }} 
+          {% if u.installed and u.informations.version != u.version_installed %}
+              -> {{ u.version_installed }}
+          {% endif %}
+      </td>
       <td>{{ u.informations.license }}</td>
       <td>{{ u.plugin.parent }}</td>
       <td>
-          {% if u.installed %}
+          {% if u.installed and u.informations.version != u.version_installed %}
+            <a href="{{url_for('market.market_get', module=u.name)}}" class="btn btn-small btn-warning"><i class="glyphicon glyphicon-refresh"></i></a>
+          {% elif u.installed and u.informations.version == u.version_installed %}
             <a href="{{url_for('market.market_del', module=u.name)}}" class="btn btn-small btn-danger"><i class="glyphicon glyphicon-remove"></i></a>
           {% else %}
             <a href="{{url_for('market.market_get', module=u.name)}}" class="btn btn-small btn-success"><i class="glyphicon glyphicon-arrow-down"></i></a>
