updated tablesorter and added bootstrap theme

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" media="screen" title="xivo" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <link rel="alternate stylesheet" media="screen" title="original" href="{{ url_for('static', filename='css/bootstrap-classic.css') }}">
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap-progressbar.css') }}">
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/theme.bootstrap.css') }}">
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/custom.css') }}">
 
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery-2.0.3.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.min.js') }}"></script>
+    <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.widgets.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap-progressbar.min.js') }}"></script>
 
