WIP tested new table with pagination, sort, search

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,9 @@
 
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery-2.0.3.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.min.js') }}"></script>
+    <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.pager.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.widgets.min.js') }}"></script>
+    <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.widgets-filter-formatter.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap-progressbar.min.js') }}"></script>
 
