--- a/app/core/profil/templates/profil/accounts.html
+++ b/app/core/profil/templates/profil/accounts.html
@@ -4,7 +4,18 @@
 {% set real_role = {100 : 'Admin', 200 : 'Manager', 300 : 'Root' } %}
 
 <div class="table-responsive">
-  <p class="text-right"><a class="btn btn-primary btn-xs" href="{{url_for('profil.account_add')}}"><i class="glyphicon glyphicon-plus"></i> {{ _('Add') }}</a></p>
+  <div class="row" style="margin-right: 0px; padding-left: 0px; margin-bottom: 20px;">
+    <div class="col-md-3 col-md-offset-9">
+      <div class="input-group input-group-sm">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+        <input class="search form-control" type="search">
+        <div class="input-group-btn">
+          <button class="btn btn-primary reset"><i class="glyphicon glyphicon-remove"></i></button>&nbsp;&nbsp;
+          <a class="btn btn-primary btn-xs" href="{{url_for('profil.account_add')}}"><i class="glyphicon glyphicon-plus"></i> {{ _('Add') }}</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <table class="table table-bordered table-striped table-highlight">
     <thead>
       <tr>
@@ -13,9 +24,29 @@
         <th>{{ _('Display name') }}</th>
         <th>{{ _('Role') }}</th>
         <th>{{ _('Organisation') }}</th>
-        <th style="width: 70px"></th>
+        <th style="width: 5%" class="sorter-false"></th>
       </tr>
     </thead>
+    <tfoot>
+        <tr>
+		<th data-column="0" colspan="7" class="ts-pager form-horizontal tablesorter-pager">
+			<button type="button" class="btn first disabled"><i class="icon-step-backward glyphicon glyphicon-step-backward"></i></button>
+			<button type="button" class="btn prev disabled"><i class="icon-arrow-left glyphicon glyphicon-backward"></i></button>
+			<span class="pagedisplay"></span>
+			<button type="button" class="btn next"><i class="icon-arrow-right glyphicon glyphicon-forward"></i></button>
+			<button type="button" class="btn last"><i class="icon-step-forward glyphicon glyphicon-step-forward"></i></button>
+			<select class="pagesize input-mini" title="Select page size">
+				<option selected="selected" value="10">10</option>
+				<option value="20">20</option>
+				<option value="30">30</option>
+				<option value="40">40</option>
+			</select>
+			<select class="pagenum input-mini" title="Select page number"><option>1</option><option>2</option></select>
+		</th>
+        </tr>
+    </tfoot>
+
+
     <tbody>
     {% for u in users %}
       <tr>
@@ -33,6 +64,48 @@
     </tbody>
   </table>
 </div>
+
+
+<script type="text/javascript">
+$(function() {
+
+  $.extend($.tablesorter.themes.bootstrap, {
+    table      : 'table table-bordered',
+    caption    : 'caption',
+    header     : 'bootstrap-header',
+    sortNone   : 'bootstrap-icon-unsorted',
+    sortAsc    : 'icon-chevron-up glyphicon glyphicon-chevron-up',
+    sortDesc   : 'icon-chevron-down glyphicon glyphicon-chevron-down',
+  });
+
+
+  var $table = $("table").tablesorter({
+    theme : "bootstrap",
+    widthFixed: true,
+    headerTemplate : '{content} {icon}', 
+    widgets : [ "uitheme", "filter", "zebra" ],
+
+    widgetOptions : {
+      zebra : ["even", "odd"],
+      filter_anyMatch : true,
+      filter_liveSearch : true,
+      filter_columnFilters: false,
+      filter_reset : ".reset"
+
+    }
+  })
+  .tablesorterPager({
+      container: $(".ts-pager"),
+      cssGoto  : ".pagenum",
+      removeRows: false,
+      output: '{startRow} - {endRow} / {filteredRows} ({totalRows})'
+  });
+
+  $.tablesorter.filter.bindSearch($table, $('.search'));
+
+});
+</script>
+
 
 {% include "confirm.html" %}
 {% endblock %}
