--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -12,7 +12,7 @@
         <th>{{ _('Version') }}</th>
         <th>{{ _('License') }}</th>
         <th>{{ _('Parent') }}</th>
-        <th style="width: 35px;"></th>
+        <th style="width: 3%;" class="sorter-false"></th>
       </tr>
     </thead>
     <tbody>
