--- a/app/core/servers/templates/server/server.html
+++ b/app/core/servers/templates/server/server.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% set url_add = url_for('servers.server_add') %}
+
 <div class="table-responsive">
-  <p class="text-right"><a class="btn btn-primary btn-xs" href="{{url_for('servers.server_add')}}"><i class="glyphicon glyphicon-plus"></i> {{_('Add') }}</a></p>
+  {% include "table-header.html" %}
   <table class="table table-bordered table-striped table-highlight">
     <thead>
       <tr>
@@ -12,7 +14,7 @@
         <th>{{ _('Password') }}</th>
         <th>{{ _('Protocol') }}</th>
         <th>{{ _('Organisation') }}</th>
-        <th style="width: 70px;"></th>
+        <th style="width: 6%;" class="sorter-false"></th>
       </tr>
     </thead>
     <tbody>
@@ -33,6 +35,7 @@
       </tr>
     {% endfor %}
     </tbody>
+   {% include "table-footer.html" %}
   </table>
 </div>
 
