--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/jquery.tablesorter.widgets-filter-formatter.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/bootstrap-progressbar.min.js') }}"></script>
+    <script language="javascript" type=text/javascript src="{{ url_for('static', filename='js/xivo-table.js') }}"></script>
 
     {% block header %}
     {% endblock %}
