--- a/app/core/market/templates/market/market.html
+++ b/app/core/market/templates/market/market.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <div class="table-responsive">
+   {% include "table-header.html" %}
    <table class="table table-bordered table-striped table-highlight">
      <thead>
       <tr>
